// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormikCompactPeoplePicker /> renders correctly as a field component 1`] = `
<form
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="ms-BasePicker"
    onKeyDown={[Function]}
  >
    <div
      className="ms-FocusZone"
      data-focuszone-id="FocusZone35"
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDownCapture={[Function]}
      role="presentation"
    >
      <div
        className="ms-SelectionZone"
        onClick={[Function]}
        onContextMenu={[Function]}
        onDoubleClick={[Function]}
        onFocusCapture={[Function]}
        onKeyDown={[Function]}
        onKeyDownCapture={[Function]}
        onMouseDown={[Function]}
        onMouseDownCapture={[Function]}
        role="presentation"
      >
        <div
          className="ms-BasePicker-text pickerText_e7c83bc9"
        >
          <span
            className="pickerItems_e7c83bc9"
            id="selected-items-id__34"
            role="list"
          >
            <div
              aria-labelledby="selectedItemPersona-id__42"
              className="ms-PickerPersona-container personaContainer_27aff86c"
              data-is-focusable={true}
              data-is-sub-focuszone={true}
              data-selection-index={0}
              role="listitem"
            >
              <div
                className="ms-PickerItem-content itemContent_27aff86c"
                id="selectedItemPersona-id__42"
              >
                <div
                  className="ms-Persona ms-Persona--size28 root-47"
                  size={7}
                >
                  <div
                    className="ms-Persona-coin ms-Persona--size28 coin-54"
                    size={7}
                  >
                    <div
                      className="ms-Persona-imageArea imageArea-56"
                    >
                      <div
                        aria-hidden="true"
                        className="ms-Persona-initials initials-59"
                      >
                        <span>
                          FB
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    className="ms-Persona-details details-48"
                  >
                    <div
                      className="ms-Persona-primaryText primaryText-49"
                    >
                      <div
                        className="ms-TooltipHost root-62"
                        onBlurCapture={[Function]}
                        onFocusCapture={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        Foo Bar
                      </div>
                    </div>
                    <div
                      className="ms-Persona-secondaryText secondaryText-50"
                    >
                      <div
                        className="ms-TooltipHost root-62"
                        onBlurCapture={[Function]}
                        onFocusCapture={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        foo@bar.com
                      </div>
                    </div>
                    <div
                      className="ms-Persona-tertiaryText tertiaryText-51"
                    />
                    <div
                      className="ms-Persona-optionalText optionalText-52"
                    />
                  </div>
                </div>
              </div>
              <button
                className="ms-Button ms-Button--icon ms-PickerItem-removeButton removeButton_27aff86c root-63"
                data-is-focusable={true}
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                type="button"
              >
                <div
                  className="ms-Button-flexContainer flexContainer-64"
                >
                  <i
                    aria-hidden={true}
                    className="ms-Button-icon icon-71"
                    data-icon-name="Cancel"
                    role="presentation"
                    style={
                      Object {
                        "fontSize": "12px",
                      }
                    }
                  />
                </div>
              </button>
            </div>
          </span>
          <input
            aria-autocomplete="both"
            aria-controls=" "
            aria-describedby="selected-items-id__34"
            aria-expanded={false}
            aria-haspopup="true"
            autoCapitalize="off"
            autoComplete="off"
            className="ms-BasePicker-input pickerInput_e7c83bc9"
            data-lpignore={true}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onCompositionEnd={[Function]}
            onCompositionStart={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            role="combobox"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`<FormikListPeoplePicker /> renders correctly as a field component 1`] = `
<form
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div>
    <div
      className="ms-BasePicker"
      onKeyDown={[Function]}
    >
      <div
        className="ms-BasePicker-text pickerText_e7c83bc9"
      >
        <input
          aria-controls=" "
          aria-expanded={false}
          aria-haspopup="true"
          autoCapitalize="off"
          autoComplete="off"
          className="ms-BasePicker-input pickerInput_e7c83bc9"
          data-lpignore={true}
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          role="combobox"
          value=""
        />
      </div>
    </div>
    <div
      className="ms-SelectionZone"
      onClick={[Function]}
      onContextMenu={[Function]}
      onDoubleClick={[Function]}
      onFocusCapture={[Function]}
      onKeyDown={[Function]}
      onKeyDownCapture={[Function]}
      onMouseDown={[Function]}
      onMouseDownCapture={[Function]}
      role="presentation"
    >
      <div
        className="ms-FocusZone ms-BasePicker-selectedItems"
        data-focuszone-id="FocusZone68"
        id="selected-items-id__67"
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDownCapture={[Function]}
        role="presentation"
      >
        <div
          aria-labelledby="selectedItemPersona-id__75"
          className="ms-PickerPersona-container personaContainer_27aff86c"
          data-is-focusable={true}
          data-is-sub-focuszone={true}
          data-selection-index={0}
          role="listitem"
        >
          <div
            className="ms-PickerItem-content itemContent_27aff86c"
            id="selectedItemPersona-id__75"
          >
            <div
              className="ms-Persona ms-Persona--size28 root-47"
              size={7}
            >
              <div
                className="ms-Persona-coin ms-Persona--size28 coin-54"
                size={7}
              >
                <div
                  className="ms-Persona-imageArea imageArea-56"
                >
                  <div
                    aria-hidden="true"
                    className="ms-Persona-initials initials-59"
                  >
                    <span>
                      FB
                    </span>
                  </div>
                </div>
              </div>
              <div
                className="ms-Persona-details details-48"
              >
                <div
                  className="ms-Persona-primaryText primaryText-49"
                >
                  <div
                    className="ms-TooltipHost root-62"
                    onBlurCapture={[Function]}
                    onFocusCapture={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    Foo Bar
                  </div>
                </div>
                <div
                  className="ms-Persona-secondaryText secondaryText-50"
                >
                  <div
                    className="ms-TooltipHost root-62"
                    onBlurCapture={[Function]}
                    onFocusCapture={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    foo@bar.com
                  </div>
                </div>
                <div
                  className="ms-Persona-tertiaryText tertiaryText-51"
                />
                <div
                  className="ms-Persona-optionalText optionalText-52"
                />
              </div>
            </div>
          </div>
          <button
            className="ms-Button ms-Button--icon ms-PickerItem-removeButton removeButton_27aff86c root-63"
            data-is-focusable={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <div
              className="ms-Button-flexContainer flexContainer-64"
            >
              <i
                aria-hidden={true}
                className="ms-Button-icon icon-71"
                data-icon-name="Cancel"
                role="presentation"
                style={
                  Object {
                    "fontSize": "12px",
                  }
                }
              />
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`<FormikNormalPeoplePicker /> renders correctly as a field component 1`] = `
<form
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="ms-BasePicker"
    onKeyDown={[Function]}
  >
    <div
      className="ms-FocusZone"
      data-focuszone-id="FocusZone2"
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDownCapture={[Function]}
      role="presentation"
    >
      <div
        className="ms-SelectionZone"
        onClick={[Function]}
        onContextMenu={[Function]}
        onDoubleClick={[Function]}
        onFocusCapture={[Function]}
        onKeyDown={[Function]}
        onKeyDownCapture={[Function]}
        onMouseDown={[Function]}
        onMouseDownCapture={[Function]}
        role="presentation"
      >
        <div
          className="ms-BasePicker-text pickerText_e7c83bc9"
        >
          <span
            className="pickerItems_e7c83bc9"
            id="selected-items-id__1"
            role="list"
          >
            <div
              aria-labelledby="selectedItemPersona-id__9"
              className="ms-PickerPersona-container personaContainer_27aff86c"
              data-is-focusable={true}
              data-is-sub-focuszone={true}
              data-selection-index={0}
              role="listitem"
            >
              <div
                className="ms-PickerItem-content itemContent_27aff86c"
                id="selectedItemPersona-id__9"
              >
                <div
                  className="ms-Persona ms-Persona--size28 root-47"
                  size={7}
                >
                  <div
                    className="ms-Persona-coin ms-Persona--size28 coin-54"
                    size={7}
                  >
                    <div
                      className="ms-Persona-imageArea imageArea-56"
                    >
                      <div
                        aria-hidden="true"
                        className="ms-Persona-initials initials-59"
                      >
                        <span>
                          FB
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    className="ms-Persona-details details-48"
                  >
                    <div
                      className="ms-Persona-primaryText primaryText-49"
                    >
                      <div
                        className="ms-TooltipHost root-62"
                        onBlurCapture={[Function]}
                        onFocusCapture={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        Foo Bar
                      </div>
                    </div>
                    <div
                      className="ms-Persona-secondaryText secondaryText-50"
                    >
                      <div
                        className="ms-TooltipHost root-62"
                        onBlurCapture={[Function]}
                        onFocusCapture={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        foo@bar.com
                      </div>
                    </div>
                    <div
                      className="ms-Persona-tertiaryText tertiaryText-51"
                    />
                    <div
                      className="ms-Persona-optionalText optionalText-52"
                    />
                  </div>
                </div>
              </div>
              <button
                className="ms-Button ms-Button--icon ms-PickerItem-removeButton removeButton_27aff86c root-63"
                data-is-focusable={true}
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                type="button"
              >
                <div
                  className="ms-Button-flexContainer flexContainer-64"
                >
                  <i
                    aria-hidden={true}
                    className="ms-Button-icon icon-71"
                    data-icon-name="Cancel"
                    role="presentation"
                    style={
                      Object {
                        "fontSize": "12px",
                      }
                    }
                  />
                </div>
              </button>
            </div>
          </span>
          <input
            aria-autocomplete="both"
            aria-controls=" "
            aria-describedby="selected-items-id__1"
            aria-expanded={false}
            aria-haspopup="true"
            autoCapitalize="off"
            autoComplete="off"
            className="ms-BasePicker-input pickerInput_e7c83bc9"
            data-lpignore={true}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onCompositionEnd={[Function]}
            onCompositionStart={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            role="combobox"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</form>
`;
